# VitaBrot

./: .gitignore  CMakeLists.txt  README.mediawiki
include/: complex.hh  complexpair-intrinsics.hh  complexpair-neon.hh  complexpair.hh  debuglog.h  display.hh  mandelbrot.hh
lib/: debuglog.c  display.cc  mandelbrot.cc
sce_sys/livearea/contents/: template.xml
src/: main.cc
